--- a/app/views/auctions/index.html.haml
+++ b/app/views/auctions/index.html.haml
@@ -1,2 +1,14 @@
-%h1 Auctions#index
-%p Find me in app/views/auctions/index.html.haml
+%h2 開催中のオークション一覧
+
+%table.table
+  %thead
+    %tr
+      %th オークション
+      %th 出品者
+      %th オークション締切日
+      %th 最低入札価格
+      %th 現在の入札状況
+  %tbody
+    = render @auctions
+
+= paginate @auctions
