--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -6,7 +6,14 @@
           = link_to 'Auctions', root_path, class: "navbar-brand"
         %ul.nav.navbar-nav.navbar-right
           - if user_signed_in?
-            %li= link_to "#{current_user.email}", edit_user_registration_path
+            %li.dropdown
+              = link_to '#', class: "dropdown-toggle", data: { toggle: "dropdown" }, role: "button", area: { haspopup: "true", expanded: "false" } do
+                %span= current_user.name
+                %span.caret
+              %ul.dropdown-menu
+                %li= link_to 'プロファイルの編集', edit_user_registration_path
+                %li.divider{ role: "separator" }
+                %li= link_to 'マイページ', my_products_path
             %li= link_to 'ログアウト', destroy_user_session_path, method: :delete
           - else
             %li= link_to 'ログイン', new_user_session_path
