--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,9 +11,15 @@
                 %span= current_user.name
                 %span.caret
               %ul.dropdown-menu
-                %li= link_to 'プロファイルの編集', edit_user_registration_path
+                %li
+                  = link_to edit_user_registration_path do
+                    %i.glyphicon.glyphicon-user
+                    %span プロファイルの編集
                 %li.divider{ role: "separator" }
-                %li= link_to 'マイページ', my_products_path
+                %li
+                  = link_to my_products_path do
+                    %i.glyphicon.glyphicon-heart
+                    %span マイページ
             %li= link_to 'ログアウト', destroy_user_session_path, method: :delete
           - else
             %li= link_to 'ログイン', new_user_session_path
