オークション詳細ページ
出品者のみ情報編集リンク表示。

--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -1,2 +1,9 @@
 @import bootstrap-sprockets
 @import bootstrap
+
+.position-parent
+  position: relative
+  .panel-position-right
+    position: absolute
+    top: 5px
+    right: 10px
