--- a/app/views/auctions/show.html.haml
+++ b/app/views/auctions/show.html.haml
@@ -2,8 +2,8 @@
   .panel-heading.position-parent
     .panel-title= "#{@auction.name}"
     - if user_signed_in? && current_user == @auction.user
-      .panel-position-right.btn.btn-default.btn-sm
-        = link_to [ :my, @auction ] do
+      .panel-position-right
+        = link_to [ :my, @auction ], class: "btn btn-warning btn-sm" do
           %i.glyphicon.glyphicon-pencil
           %span 出品情報を編集
 
@@ -14,3 +14,21 @@
   .panel-footer
     = "オークション締切日：#{@auction.deadline_date}"
 
+.row
+  .col-sm-6.col-sm-push-3
+    = link_to '#', class: "btn btn-large btn-block btn-success" do
+      %i.glyphicon.glyphicon-jpy
+      %span 入札する
+
+%h3 現在までの入札状況
+
+.note.text-info
+  - if @auction.bids.empty?
+    まだ入札はありません。
+  - else
+    ="#{@auction.bids.count} 件の入札がありました。"
+
+%ul.list-group
+  - @auction.bids.each do |bid|
+    %li.list-group-item
+      = "#${bid.usesr.name} さんが #{bid.price} 円で入札しました。"
