入札は1ユーザー1オークションに対し、1回だけなので、単数形リソースに変更。
入札ボタンは既に入札している場合、取り消しボタンにする。

--- a/app/views/bids/_form.html.haml
+++ b/app/views/bids/_form.html.haml
@@ -6,7 +6,7 @@
   .note.text-danger
     = "最低入札価格は #{@auction.min_price} 円です。"
 
-  = simple_form_for [ @auction, @bid ] do |f|
+  = simple_form_for [ @auction, @bid ], url: auction_bid_path do |f|
     = f.input :price, label: '入札金額'
     = f.button :submit, class: "btn btn-primary"
 
