オークション一覧に現在の最高入札金額の表示を追加。

--- a/app/views/auctions/_auction.html.haml
+++ b/app/views/auctions/_auction.html.haml
@@ -3,4 +3,5 @@
   %td= auction.user.name
   %td= auction.deadline_date
   %td= "#{auction.min_price} 円"
-  %td --
+  %td= "#{auction.bids.count} 件"
+  %td= "#{auction.max_bid_price} 円"
