--- a/app/views/auctions/index.html.haml
+++ b/app/views/auctions/index.html.haml
@@ -7,7 +7,8 @@
       %th 出品者
       %th オークション締切日
       %th 最低入札価格
-      %th 現在の入札状況
+      %th 現在の入札数
+      %th 現在の最高入札金額
   %tbody
     = render @auctions
 
