--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -17,7 +17,7 @@
                     %span プロファイルの編集
                 %li.divider{ role: "separator" }
                 %li
-                  = link_to my_products_path do
+                  = link_to my_auctions_path do
                     %i.glyphicon.glyphicon-heart
                     %span マイページ
             %li= link_to 'ログアウト', destroy_user_session_path, method: :delete
