--- a/app/views/my/auctions/_auction.html.haml
+++ b/app/views/my/auctions/_auction.html.haml
@@ -1,4 +1,12 @@
-%tr
+%tr{ class: auction.closed ? "warning" : "success" }
+  %td
+    - if auction.closed
+      %i.glyphicon.glyphicon-ok
+      %span 終了
+    - else
+      %span 開催中
   %td= link_to auction.name, [ :my, auction ]
   %td= auction.short_description
-  %td= link_to '削除', [ :my, auction ], method: :delete, data: { confirm: "本当に削除しますか？" }, class: "btn btn-danger"
+  %td
+    - if auction.bids.empty?
+      = link_to '出品取りやめ', [ :my, auction ], method: :delete, data: { confirm: "本当に削除しますか？" }, class: "btn btn-danger btn-sm pull-right"
