自分の落札品コメント一覧

--- a/app/views/layouts/_my_menu.html.haml
+++ b/app/views/layouts/_my_menu.html.haml
@@ -1,3 +1,4 @@
 %ul.list-group
   %li.list-group-item= link_to '商品マスタ',my_products_path
   %li.list-group-item= link_to '出品一覧', my_auctions_path
+  %li.list-group-item= link_to '落札一覧（コメント）', my_comments_path
