コメントが必ず落札bidの下に付くので、コントローラーをネスト。

--- a/app/views/my/bids/index.html.haml
+++ b/app/views/my/bids/index.html.haml
@@ -1,4 +1,4 @@
-%h3 私の落札商品一覧（コメント）
+%h3 私の落札商品一覧
 
 %table.table
   %thead
@@ -8,4 +8,4 @@
       %th 落札日
       %th コメント
   %tbody
-    = render @comments
+    = render @bids
