オークション入札時のモーダル、エラーメッセージの表示方法を変更。
金額が低すぎて入札出来ない場合、リダイレクトせずにモーダル上にメッセージを表示するようにした。
入札モデル（Bid）のバリデーションエラーを追加。

--- a/app/views/bids/_form.html.haml
+++ b/app/views/bids/_form.html.haml
@@ -6,7 +6,10 @@
   .note.text-danger
     = "最低入札価格は #{@auction.min_price} 円です。"
 
-  = simple_form_for [ @auction, @bid ], url: auction_bid_path do |f|
+  #error-message
+
+  = simple_form_for [ @auction, @bid ], url: auction_bid_path, remote: true do |f|
+    = f.error_notification
     = f.input :price, label: '入札金額'
     = f.button :submit, class: "btn btn-primary"
 
