Check cap deploy.

--- a/app/views/auctions/index.html.haml
+++ b/app/views/auctions/index.html.haml
@@ -1,6 +1,6 @@
 .row
   .col-sm-10
-    %h2 開催中のオークション一覧
+    %h2 開催中のオークション一覧 (NEW)
   .col-sm-2
     .btn-group{ role: "group" }
       = link_to '開催中', url_for(state: ''), class: "btn btn-success active"
