Check deploy-test.

--- a/app/views/my/auctions/index.html.haml
+++ b/app/views/my/auctions/index.html.haml
@@ -1,6 +1,6 @@
 .row
   .col-sm-9
-    %h3 私のオークション出品一覧
+    %h3 私のオークション出品一覧(deploy-test)
   .col-sm-3
     = link_to new_my_auction_path, class: "btn btn-default pull-right" do
       %i.glyphicon.glyphicon-plus
